--- a/src/variant_myth/error.rs.html
+++ b/src/variant_myth/error.rs.html
@@ -41,6 +41,10 @@
 <a href="#41" id="41">41</a>
 <a href="#42" id="42">42</a>
 <a href="#43" id="43">43</a>
+<a href="#44" id="44">44</a>
+<a href="#45" id="45">45</a>
+<a href="#46" id="46">46</a>
+<a href="#47" id="47">47</a>
 </pre></div><pre class="rust"><code><span class="doccomment">//! Error struct of project variant_myth
 
 </span><span class="comment">/* crate use */
@@ -80,6 +84,10 @@
     <span class="doccomment">/// Bad vcf record
     </span><span class="attr">#[error(<span class="string">"Bad vcf record"</span>)]
     </span>VcfBadRecord,
+
+    <span class="doccomment">/// Error in attribute name
+    </span><span class="attr">#[error(<span class="string">"Attribute name not support {0}"</span>)]
+    </span>AttributeNameNotSupport(String),
 }
 
 <span class="doccomment">/// Alias of result
